--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "mcp-vaultwarden-server",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "MCP pour interagir avec Vaultwarden via la CLI Bitwarden.",
   "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \\"Error: no test specified\\" && exit 1"
   },
   "repository": {
     "type": "git",
